example A5:B5

2000-06-14 -David Faure <faure@kde.org>
-----------------------------------------------------
- Fixed what I broke in changeNameCellRef, by completely rewriting it :
  Now Unicode safe ; uses KSpreadPoint to do most of the parsing.
  Also allows spaces in table names - for when KScript supports it too.
  Merged changeNameCellRef and changeNameCellRef2 (added arg 'fullRowOrColumn')
  This fixes inserting/removing rows/columns/cells.

2000-06-19-Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Rewrite multirow function, now it works
-Now you can show comment when you move mouse on red triangle
there is a bug in new qdom because when I try to load a comment
qdom remove all '\n'
=>showComment doesn't work and blocks kspread

2000-06-19-Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now multirow work when you choose "Middle","Bottom"
-Add new icon lo16-action-series.png created by j.martin
<jpmartin@iroise.com> thanks
-Now commentLabel works but I can't reload comment
bug in qdom (qdom removes '\n')

2000-06-20-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Remove a duplicate function (funct() and insertFunction())
same think

2000-06-23-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now you can rotate text into cell
-Remove some duplicate functions or code (column_label->util_column_label
etc...)

2000-06-24-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Apply patch of Robert Wall <rwall@esatclear.ie> thanks a lot
Now you can goto cell or range directly.
KSpreadLocationEditWidget displays cell pos or range, and allows to
enter cell pos or range.
-Now you can write a table name with a space example "Table 1"
-Now you use press Key_Home you go to beginning of the row
and not at cell A1